# windbird

./: .gitignore  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
tool/: apps.py  serializers.py  urls.py  views.py
tool/information/: apps.py  urls.py  views.py
windbird/: .env.prod  Dockerfile  asgi.py  docker-compose.yml  nginx.conf  prod_settings.py  requirements  requirements.txt  settings.py  urls.py  wsgi.py
windbird/utils/: validators.py
